--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,13 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-web = "4.3.0"
+tokio-postgres = "0.7.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
 actix-web-validator = "5.0.1"
 validator = { version = "0.16", features = ["derive"] }
+
+[dependencies.tokio]
+version = "1.25.0"
+features = ["full"]
